# google-cloud-emulator-docker

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot.yml  publish-release.yaml  release.yaml
examples/create_bigtable_table/: compose.yaml
examples/create_bigtable_table/init.d/: 01-create-table.py
examples/create_datastore_entities/: compose.yaml
examples/create_datastore_entities/init.d/: 01-create-entities.py
examples/create_firestore_collection/: compose.yaml
examples/create_firestore_collection/init.d/: 01-create-collection.py
examples/create_pubsub_topic/: compose.yaml
examples/create_pubsub_topic/init.d/: 01-create-topic.py
examples/create_spanner_database/: compose.yaml
examples/create_spanner_database/init.d/: 01-create-database.py
tests/delayed_initialization/: compose.yaml
tests/delayed_initialization/init.d/: 01-delayed-init.sh
