[project]
name = "google-cloud-emulator"
version = "0.1.0"
description = "Running initialization scripts for Google Cloud Emulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigtable>=2.30.1",
    "google-cloud-datastore>=2.21.0",
    "google-cloud-firestore>=2.20.2",
    "google-cloud-pubsub>=2.29.0",
    "google-cloud-spanner>=3.53.0",
]
